# ufodecode

./: CMakeLists.txt  INSTALL  Makefile  NEWS  README  README.md  config.h.meson.in  deinterlace.c  ipe.pc.in  ipedec.c  meson.build  meson_options.txt  ufodecode.pc.in
doc/: Doxyfile.in
src/: CMakeLists.txt  config.h.in  libipe-private.h  libipe.c  libipe.h  ufodecode-private.h  ufodecode.c  ufodecode.h  versions.ldscript
test/: CMakeLists.txt  deinterlace.c  ipedec.c  timer.c  timer.h
